# gho

./: .gitmodules  CMakeLists.txt  License.CC_BY_2.0.human-readable_summary.txt  License.CC_BY_2.0.txt  License.CC_BY_3.0.human-readable_summary.txt  README.md  README.txt
cmake/: gho-config.cmake  gho_gmp-config.cmake  gho_linux-config.cmake  gho_os_x-config.cmake  gho_unix-config.cmake  gho_windows-config.cmake
doc/img/: Bubo Virginianus (Grand-Duc D'Amérique).License.CC_BY_2.0.txt  gho_logo.License.CC_BY_3.0.txt
include/: Doxyfile
tests/: any.c  c_str.c  char.c  gho.c  int.c  math.c  matrix_T.c  now.c  operand.c  start_and_size.c  string.c  type.c  unused.c  vector_T.c
